<resources>
    <string name="app_name">SPLCodeQuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //String propios
    <string name="register_now">¿No tienes una cuenta? Regístrate ahora.</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrar cuenta</string>
    <string name="tb_introMail">E-mail válido</string>
    <string name="tb_introPass">Contraseña</string>
    <string name="tv_result">Resultado</string>
    <string name="lorem_ipsum">Resultado</string>
    <string name="tv_resultado">Resultado</string>
    <string name="tv_acertadas">Respuestas acertadas:</string>
    <string name="tv_puntuacion">Puntuación obtenida</string>
    <string name="tv_splash">Desarrollado por Suar PL</string>
    <string name="iv_SplashDescription">SplashLogo</string>
    <string name="te_nombreRegistro">Nombre de usuario</string>
    <string name="tv_loginEmail">E-mail de usuario</string>
    <string name="tv_cantMonedas">XXXXXX</string>
    <string name="tv_monedas">monedas</string>
    <string name="rb_dificil">Difícil</string>
    <string name="rb_normal">Normal</string>
    <string name="tv_dificultad">Dificultad</string>
    <string name="tv_selecCategoria">Categoría</string>
    <string name="bt_salir">SALIR</string>
    <string name="bt_volver">VOLVER</string>
    <string name="bt_ranking">RANKING</string>
    <string name="tvSelecLenguaje">Selecciona lenguaje</string>
    <string name="tv_NowRegistered">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="tvTituloCategory">KOTLIN</string>

    <string name="ses_iniciada">Sesión iniciada correctamente</string>
    <string name="ses_error">Error al iniciar la sesión</string>
    <string name="ses_notvalid">Campos vacíos o no válidos</string>
    <string name="reg_success">Usuario registrado correctamente</string>
    <string name="reg_error">Error al registrar usuario</string>

    <string name="coin_add">Añadidas 1000 monedas</string>
    <string name="coin_notenough">No tienes suficientes monedas</string>

    <string name="tvCurrentPreg">1</string>
    <string name="tvPregunta">¿Qué representa "fname" en el siguiente código: fun myFunction(fname: String)?</string>
    <string name="tvTitPregunta">Pregunta</string>
    <string name="tvTotalPregunta">1</string>
    <string name="tvDe">de</string>
    <string name="tvTimer">100</string>
    <string name="bt_Respuesta1">Respuesta 1</string>
    <string name="bt_Respuesta2">Respuesta 2</string>
    <string name="bt_Respuesta3">Respuesta 3</string>
    <string name="bt_Respuesta4">Respuesta 4</string>
    <string name="tvFallidas">Respuestas fallidas:</string>
    <string name="tvDificultad">Multiplicador por dificultad:</string>
    <string name="tvTotal">Total</string>
    <string name="tvUsuario">Usuario</string>
    <string name="etFiltrarCateHint">Filtrar categoría</string>
    <string name="borrar_cuenta">Borrar Cuenta</string>
    <string name="ranking">RANK</string>
    <string name="tiempo_100">Tiempo fijado a 100 segundos</string>
    <string name="tiempo_60">Tiempo fijado a 60 segundos</string>
    <string name="quieres_salir">¿Quieres salir de la aplicación?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="quieres_borrar">¿Quieres borrar la cuenta?</string>
    <string name="cuenta_borrada">Cuenta borrada satisfactoriamente</string>
    <string name="shop_articulo_comprado">Artículo adquirido satisfactoriamente</string>
    <string name="error_borrado">Error al borrar la cuenta</string>
    <string name="resp_correcta">Correcto!</string>
    <string name="resp_incorrecta">Incorrecto!</string>
    <string name="max_puntuacion">Puntuaciones</string>
    <string name="shop_title">Tienda</string>
    <string name="shop_item1">Pack DLC 1, que incluye dos nuevas categorías de test adicionales.</string>
    <string name="shop_allPurchased">Ya has comprado todos los artículos disponibles, pronto llegarán nuevos con las siguientes actualizaciones, permanece alerta!</string>
    <string name="shop_bt_comprar">COMPRAR</string>
    <string name="shop_ya_adquirido">YA ADQUIRIDO</string>

    <string name="alert_logout">¿Quieres cerrar sesión?</string>
    <string name="alert_title_logout">CERRAR SESIÓN</string>
    <string name="edit_nombre">Introduce un nuevo nombre</string>

</resources>